style.css
/*discribe by TradeOffEgoist*/

@font-face {
  font-family: "KCC-Hanbit";
  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2403-2@1.0/KCC-Hanbit.woff2")
    format("woff2");
  font-weight: normal;
  font-style: normal;
}
body {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: "KCC-Hanbit";
}
header {
  width: 100%;
  height: 70px;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  background-color: white;
  z-index: 100;
}
.header_wrapper {
  display: flex;
  justify-content: center;

  width: 100%;
  height: 100%;
  max-width: 1920px;
}
.header_container {
  width: 100%;
  height: 100%;

  margin-left: 200px;
  margin-right: 200px;
  box-sizing: border-box;

  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
.header_logoAndMenus {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 32px;
}
.header_Menu_Container {
  display: flex;
  justify-content: center;
  align-items: center;
}
.header_Menu1 {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.125rem;

  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 15px;
  padding-right: 16px;
  box-sizing: border-box;
}
.header_Menu2 {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.125rem;

  padding-top: 24px;
  padding-bottom: 24px;
  padding-left: 23px;
  padding-right: 23px;
  box-sizing: border-box;
}
main {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin-top: 70px;
  box-sizing: border-box;
}
.main_page {
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
  background-color: white;
}
.main_page.page_1 {
  background-color: #cfe5ff;
}
.main_page.page_5 {
  background-color: #cfe5ff;
}
.main_wrapper {
  max-width: 1920px;
  width: 100%;
  height: 540px;

  display: flex;
  justify-content: center;
  overflow-x: hidden;
}
.main_wrapper.card {
  height: 720px;
}
.main_container {
  max-width: 1320px;
  width: 100%;
  height: 100%;

  display: flex;
  align-items: center;
  position: relative;
  /* overflow-x: hidden; */
}

.main_page_textAndBtnArea {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  gap: 32px;

  width: 357px;
  height: 200px;

  font-size: 40px;
  font-weight: 700;
}
.main_page_panda {
  width: 996px;
  height: auto;

  align-self: self-end;
  /* position: absolute;
  left: 25%; */
}

.main_card {
  max-height: 444px;
  width: 100%;
  height: 60%;
  display: flex;
  justify-content: start;
  align-items: center;
}
.main_card.reverse {
  flex-direction: row-reverse;
  justify-content: end;
}

.card_text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  gap: 12px;

  padding-left: 64px;
  padding-right: 0px;
  box-sizing: border-box;
  width: 380px;
  height: 100%;
}
.card_text.reverse {
  padding-right: 64px;
  padding-left: 0px;
}
footer {
  width: 100%;
  height: 160px;
  background-color: #111827;
  box-sizing: border-box;
  justify-content: center;

  display: flex;
}
.footer_wrapper {
  width: 100%;
  max-width: 1920px;
  display: flex;
  justify-content: center;
}
.footer_container {
  display: flex;
  width: 100%;
  justify-content: space-between;
  margin-left: 200px;
  margin-right: 200px;
  padding-top: 32px;
  padding-bottom: 108px;
  box-sizing: border-box;
}
.icon {
  display: flex;
  gap: 12px;
}
.icon_item {
  width: 20px;
  height: 20px;
}

